force-app/main/default/objects/Building__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>