force-app/main/default/objects/Building__c/fields/Total_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_Employees__c</fullName>
    <label>Total Employees</label>
    <summarizedField>Floor__c.Total_Employees__c</summarizedField>
    <summaryForeignKey>Floor__c.Building__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>