force-app/main/default/objects/Building__c/fields/Total_Floors__c.field-meta.xml
<CustomField>
    <fullName>Total_Floors__c</fullName>
    <label>Total Floors</label>
    <summaryForeignKey>Floor__c.Building__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>