force-app/main/default/objects/Building__c/fields/wdcLocation__c.field-meta.xml
<CustomField>
    <fullName>wdcLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work.com Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Building Locations</relationshipLabel>
    <relationshipName>Building_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>